// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreCard renders as expected when score is below max 1`] = `
<div>
  <div
    class="ScoreCard"
  >
    <span
      class="ScoreCard--TitleHeader"
    >
      Test Score
    </span>
    <div
      class="ScoreCard--CircularProgressbarWrapper"
    >
      <svg
        class="CircularProgressbar "
        data-test-id="CircularProgressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: transparent; stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px;"
        />
        <path
          class="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: hsl(120, 84%, 57%); stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 176.62732030182616px;"
        />
        <text
          class="CircularProgressbar-text"
          style="fill: hsl(120, 84%, 57%);"
          x="50"
          y="50"
        >
          38.9%
        </text>
      </svg>
    </div>
    <a
      href="test.link"
      rel="noreferrer noopener"
      target="_blank"
    >
      How to improve 
      <svg
        class="NewWindowIcon"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle;"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m31.6 31.6v-10.3h3.4v10.3c0 1.8-1.6 3.4-3.4 3.4h-23.2c-1.8 0-3.4-1.6-3.4-3.4v-23.2c0-1.8 1.6-3.4 3.4-3.4h10.4v3.4h-10.4v23.2h23.2z m-9.1-26.6h12.5v12.5h-3.4v-6.8l-16.8 16.8-2.3-2.3 16.8-16.8h-6.8v-3.4z"
          />
        </g>
      </svg>
    </a>
  </div>
</div>
`;

exports[`ScoreCard renders as expected when score is max 1`] = `
<div>
  <div
    class="ScoreCard"
  >
    <span
      class="ScoreCard--TitleHeader"
    >
      Test Score
    </span>
    <div
      class="ScoreCard--CircularProgressbarWrapper"
    >
      <svg
        class="CircularProgressbar "
        data-test-id="CircularProgressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: transparent; stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px;"
        />
        <path
          class="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: hsl(120, 100%, 50%); stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px;"
        />
        <text
          class="CircularProgressbar-text"
          style="fill: hsl(120, 100%, 50%);"
          x="50"
          y="50"
        >
          100.0%
        </text>
      </svg>
    </div>
    <a
      href="test.link"
      rel="noreferrer noopener"
      target="_blank"
    >
      Great! What does this mean 
      <svg
        class="NewWindowIcon"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle;"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m31.6 31.6v-10.3h3.4v10.3c0 1.8-1.6 3.4-3.4 3.4h-23.2c-1.8 0-3.4-1.6-3.4-3.4v-23.2c0-1.8 1.6-3.4 3.4-3.4h10.4v3.4h-10.4v23.2h23.2z m-9.1-26.6h12.5v12.5h-3.4v-6.8l-16.8 16.8-2.3-2.3 16.8-16.8h-6.8v-3.4z"
          />
        </g>
      </svg>
    </a>
  </div>
</div>
`;

exports[`ScoreCard renders as expected when score is zero 1`] = `
<div>
  <div
    class="ScoreCard"
  >
    <span
      class="ScoreCard--TitleHeader"
    >
      Test Score
    </span>
    <div
      class="ScoreCard--CircularProgressbarWrapper"
    >
      <svg
        class="CircularProgressbar "
        data-test-id="CircularProgressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: hsl(0, 100%, 50%); stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 0px;"
        />
        <path
          class="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke: hsl(120, 20%, 80%); stroke-linecap: butt; stroke-dasharray: 289.02652413026095px 289.02652413026095px; stroke-dashoffset: 289.02652413026095px;"
        />
        <text
          class="CircularProgressbar-text"
          style="fill: hsl(120, 20%, 80%);"
          x="50"
          y="50"
        >
          0.0%
        </text>
      </svg>
    </div>
    <a
      href="test.link"
      rel="noreferrer noopener"
      target="_blank"
    >
      How to improve 
      <svg
        class="NewWindowIcon"
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style="vertical-align: middle;"
        viewBox="0 0 40 40"
        width="1em"
      >
        <g>
          <path
            d="m31.6 31.6v-10.3h3.4v10.3c0 1.8-1.6 3.4-3.4 3.4h-23.2c-1.8 0-3.4-1.6-3.4-3.4v-23.2c0-1.8 1.6-3.4 3.4-3.4h10.4v3.4h-10.4v23.2h23.2z m-9.1-26.6h12.5v12.5h-3.4v-6.8l-16.8 16.8-2.3-2.3 16.8-16.8h-6.8v-3.4z"
          />
        </g>
      </svg>
    </a>
  </div>
</div>
`;
